chore: Migrate to mockserver from wiremock